slurm-8640866.out
  File "/users/tschmid/scClimCSCS/nc_from_metranet.py", line 14
    sys.path.append(f'/users/{username}/scClimCSCS')
                                                  ^
SyntaxError: invalid syntax
